SERVER-8226 C++ driver fassert 16464 when runGlobalInitializersOrDie is not called

Changed implementation to not rely on the global initialization framework.